2011-04-11  Dean Jackson  <dino@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=58285
        CompositeAnimation is cleared while an AnimationBase is waiting for notification

        Occasionally hardware animations would trigger a state where
        they would tell the AnimationControllerPrivate that it should notify
        any waiting animations that they are ready to start, even though
        the RenderObject had gone away and hence the CompositeAnimation
        had been destroyed. The fix is to zero the pointer from AnimationBase
        when the CompositeAnimation destructor runs (or its animations are
        cleared) and test the validity of the CompositeAnimation before it
        is used in AnimationBase.

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::updateStateMachine):
        (WebCore::AnimationBase::fireAnimationEventsIfNeeded):
        (WebCore::AnimationBase::updatePlayState):
        (WebCore::AnimationBase::freezeAtTime):
        (WebCore::AnimationBase::beginAnimationUpdateTime):
        - test that the CompositeAnimation exists
        * page/animation/AnimationBase.h:
        (WebCore::AnimationBase::clear):
        - rename clearRenderer() to clear() as it now also clears the CompositeAnimation
        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimation::clearRenderer):
        (WebCore::CompositeAnimation::updateKeyframeAnimations):
        - call clear() rather than clearRenderer()

2011-04-11  Justin Novosad  <junov@chromium.org>

        Reviewed by Kenneth Russell.

        [Chromium] Text anti-aliasing fails when rendering text with shadow
        https://bugs.webkit.org/show_bug.cgi?id=57584

        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::drawGlyphsWin): new static function, code factored-out
        from WebCore::Font::drawGlyphs