@@ -3163,8 +3163,8 @@
             'html/parser/TextViewSourceParser.h',
             'html/parser/XSSFilter.cpp',
             'html/parser/XSSFilter.h',
-            'html/shadow/MediaControls.cpp',
-            'html/shadow/MediaControls.h',
+            'html/shadow/MediaControlRootElement.cpp',
+            'html/shadow/MediaControlRootElement.h',
             'html/shadow/MeterShadowElement.cpp',
             'html/shadow/MeterShadowElement.h',
             'html/shadow/ProgressShadowElement.cpp',
