@@ -1,3 +1,12 @@
+2011-04-11  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Eric Carlson.
+
+        Rename MediaControls to MediaControlRootElement.
+        https://bugs.webkit.org/show_bug.cgi?id=58250
+
+        * Scripts/do-webcore-rename: Documented the renaming.
+
 2011-04-11  Sam Weinig  <sam@webkit.org>
 
         Fix Windows build.
